# mandela-rust

./: .env.example  Cargo.toml  Readme.md  notes.md
channel_configs/: collab.json
client/: MandelaClient.js  chat-demo.html  chatDemo.js
samples/: channel_configs_files.txt
src/: channel.rs  channel_configs.rs  connection.rs  lib.rs  main.rs  messages.rs  redis.rs  subscription.rs  test_utils.rs
tests/: test-server-start.rs  test-sub.rs  test-utils.rs
