[package]
edition = "2021"
name = "mandela-rs"
version = "0.1.0"

[dependencies]
redis = { version = "0.25.3", features = ["tokio-comp"] }
r2d2_redis = "0.14.0"
tungstenite = "0.21.0"
crossbeam = "0.8"
crossbeam-channel = "0.5.12"
tokio-tungstenite = "0.21.0"
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3.30", features = ["sink", "std"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
lazy_static = "1.4.0"